--- a/ihomp_borrow_app/templates/base.html
+++ b/ihomp_borrow_app/templates/base.html
@@ -19,7 +19,7 @@
                             <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="{% url 'home' %}">About</a>
+                            <a class="nav-link" aria-current="page" href="{% url 'borrow' %}">About</a>
                         </li>
                     </ul>
                 </div>
