--- a/ihomp_borrow_app/templates/index.html
+++ b/ihomp_borrow_app/templates/index.html
@@ -28,7 +28,7 @@
     </ul>
     <div class="d-flex justify-content-center align-items-center">
         <!-- Centered button -->
-        <button class="btn btn-primary">Proceed</button>
+        <a class="btn btn-primary" href="{% url 'borrow' %}">Go to Borrow Page</a>
     </div>
 
 </div>
